--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideOutput": false,
+    "hidePrompt": true
+   },
    "source": [
     "# Quick Analysis of COVID-19 confirmed cases data\n",
     "\n",
@@ -17,6 +20,8 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -37,6 +42,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -54,6 +61,8 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "hideCode": true,
+    "hidePrompt": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -92,9 +101,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Latest Number of Confirmed Cases"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -117,10 +136,13 @@
        "  <thead>\n",
        "    <tr>\n",
        "      <th>country</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">US</th>\n",
        "      <th colspan=\"2\" halign=\"left\">Canada</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>region</th>\n",
+       "      <th>Texas</th>\n",
+       "      <th>Utah</th>\n",
        "      <th>British Columbia</th>\n",
        "      <th>Ontario</th>\n",
        "    </tr>\n",
@@ -128,26 +150,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2020-03-18</th>\n",
+       "      <td>173</td>\n",
+       "      <td>51</td>\n",
        "      <td>186</td>\n",
        "      <td>221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-19</th>\n",
+       "      <td>260</td>\n",
+       "      <td>80</td>\n",
        "      <td>231</td>\n",
        "      <td>257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-20</th>\n",
+       "      <td>394</td>\n",
+       "      <td>78</td>\n",
        "      <td>271</td>\n",
        "      <td>308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-21</th>\n",
+       "      <td>581</td>\n",
+       "      <td>136</td>\n",
        "      <td>424</td>\n",
        "      <td>377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-03-22</th>\n",
+       "      <td>627</td>\n",
+       "      <td>181</td>\n",
        "      <td>424</td>\n",
        "      <td>425</td>\n",
        "    </tr>\n",
@@ -156,13 +188,13 @@
        "</div>"
       ],
       "text/plain": [
-       "country              Canada        \n",
-       "region     British Columbia Ontario\n",
-       "2020-03-18              186     221\n",
-       "2020-03-19              231     257\n",
-       "2020-03-20              271     308\n",
-       "2020-03-21              424     377\n",
-       "2020-03-22              424     425"
+       "country       US                Canada        \n",
+       "region     Texas Utah British Columbia Ontario\n",
+       "2020-03-18   173   51              186     221\n",
+       "2020-03-19   260   80              231     257\n",
+       "2020-03-20   394   78              271     308\n",
+       "2020-03-21   581  136              424     377\n",
+       "2020-03-22   627  181              424     425"
       ]
      },
      "execution_count": 4,
@@ -171,20 +203,26 @@
     }
    ],
    "source": [
-    "df.loc[[('Canada', 'British Columbia'), ('Canada','Ontario')]].transpose().tail()"
+    "df.loc[[('US', 'Texas'), ('US', 'Utah'), ('Canada', 'British Columbia'), ('Canada','Ontario')]].transpose().tail()"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": true
+   },
    "source": [
-    "# Canadian Provices - Percentage of population confirmed"
+    "# Canadian Provinces - Percentage of population confirmed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -218,7 +256,10 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -370,7 +411,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidePrompt": true
+   },
    "source": [
     "# US States - Percentage of population confirmed"
    ]
@@ -378,7 +421,10 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -410,7 +456,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidePrompt": true
+   },
    "source": [
     "# Percentage of Population Confirmed - Top 12 US States"
    ]
@@ -418,7 +466,10 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -576,7 +627,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidePrompt": true
+   },
    "source": [
     "# Comparison of areas of interest\n",
     "## Percentage of population confirmed"
@@ -584,8 +637,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -648,7 +704,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidePrompt": true
+   },
    "source": [
     "## Comparison of areas of interest - Percent of Population confirmed"
    ]
@@ -656,7 +714,10 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -846,7 +907,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidePrompt": true
+   },
    "source": [
     "# Select US States and Canadian Provinces\n",
     "## Percentage of population confirmed"
@@ -855,7 +918,10 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -972,8 +1038,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [
     {
      "data": {
@@ -999,12 +1068,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": true,
+    "hidePrompt": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Hide code",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
